# sparse-field-reconstruction

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  quick_run.sh  quick_run_3d.sh  quick_run_3d_hs.sh  quick_run_3d_sim_hs.sh  quick_run_hs_timeseries.sh  quick_run_hs_timeseries_velocity.sh  quick_run_lag_tetrahedra.sh  quick_run_space_time_correlation.sh  quick_run_structure_functions.sh  quick_run_structure_functions_cube.sh  requirements.txt
data/: README.md
scripts/: run_baseline.py  run_hs_timeseries.py  run_lag_tetrahedra.py  run_sample_count_sweep.py  run_space_time_correlation.py  run_structure_functions.py
src/sparse_recon/: hs_timeseries.py  pipeline.py  types.py  visualization.py
src/sparse_recon/analysis/: __init__.py  lag_tetrahedra.py  space_time_correlation.py  structure_functions.py
src/sparse_recon/datasets/: base.py  helioswarm.py  simulation_snapshot.py  structured_snapshot.py  synthetic.py
src/sparse_recon/methods/: base.py  cubic_spline.py  linear.py  nearest.py  rbf.py  timesync.py
src/sparse_recon/metrics/: errors.py  physics.py  spectra.py
src/sparse_recon/sampling/: geometries.py  sampler.py
tests/: test_geometries.py
